[project]
name = "term-projects"
version = "0.1.0"
description = "GEM530 Term Projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
        "geopandas==1.1.1",
        "ipykernel==6.30.1",
        "matplotlib==3.10.6",
        "geodatasets==2024.8.0",
        "contextily==1.6.2",
        "pygbif==0.6.5",
        "folium==0.20.0",
        "mapclassify==2.10.0",
        "rasterio==1.4.3",
        "openpyxl==3.1.5",
        "seaborn==0.13.2",
]
